--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-helmet": "^5.2.1",
     "react-jss": "^8.6.1",
     "react-latex": "^1.3.1",
+    "react-mathjax": "^1.0.1",
+    "react-mathjax2": "0.0.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
